third_party/move/tools/move-unit-test/tests/test_sources/storage_on_error_empty_and_non_empty.exp
Running Move unit tests
[ PASS    ] 0x1::A::a
[ PASS    ] 0x1::A::b
[ PASS    ] 0x1::A::c
[ FAIL    ] 0x1::A::x
[ FAIL    ] 0x1::A::y
0x1::A::a
Output: Ok(Changes { accounts: {} })
0x1::A::b
Output: Ok(Changes { accounts: {0000000000000000000000000000000000000000000000000000000000000001: AccountChanges { modules: {}, resources: {StructTag { address: 0000000000000000000000000000000000000000000000000000000000000001, module: Identifier("A"), name: Identifier("A"), type_params: [] }: New([0])} }} })
0x1::A::c
Output: Ok(Changes { accounts: {0000000000000000000000000000000000000000000000000000000000000001: AccountChanges { modules: {}, resources: {StructTag { address: 0000000000000000000000000000000000000000000000000000000000000001, module: Identifier("A"), name: Identifier("A"), type_params: [] }: New([0])} }} })
0x1::A::x
Output: Ok(Changes { accounts: {} })
0x1::A::y
Output: Ok(Changes { accounts: {0000000000000000000000000000000000000000000000000000000000000001: AccountChanges { modules: {}, resources: {StructTag { address: 0000000000000000000000000000000000000000000000000000000000000001, module: Identifier("A"), name: Identifier("A"), type_params: [] }: New([0])} }} })

Test failures:

Failures in 0x1::A:

┌── x ──────
│ error[E11001]: test failure
│   ┌─ storage_on_error_empty_and_non_empty.move:6:9
│   │
│ 5 │     fun x() {
│   │         - In this function in 0x1::A
│ 6 │         abort 0
│   │         ^^^^^^^ Test was not expected to error, but it aborted with code 0 originating in the module 0x1::A rooted here
│ 
│ 
└──────────────────


┌── y ──────
│ error[E11001]: test failure
│    ┌─ storage_on_error_empty_and_non_empty.move:12:9
│    │
│ 10 │     fun y(a: signer) {
│    │         - In this function in 0x1::A
│ 11 │         move_to(&a, A {});
│ 12 │         abort 0
│    │         ^^^^^^^ Test was not expected to error, but it aborted with code 0 originating in the module 0x1::A rooted here
│ 
│ 
└──────────────────

Test result: FAILED. Total tests: 5; passed: 3; failed: 2
